fix: Update letter spacing for header title and subtitle

--- a/assets/scss/_header.scss
+++ b/assets/scss/_header.scss
@@ -34,8 +34,8 @@
 	}
 
 	&__title,
-	&__subtitle small {
-		letter-spacing: -1px;
+	&__subtitle {
+		letter-spacing: 0.5px;
 	}
 
 	&__title {
